# FlagAlgebra-Graph

./: LICENSE  README.md  env.yaml  pyproject.toml
examples/: edge_constrained_density_minimisation.ipynb  induced_density_maximisation.ipynb  ramsey_multiplicity.ipynb
src/flag_algebra/: build_problem.py  flag_algebra.py
